frame/support/test/tests/pallet_ui/event_wrong_item_name.stderr
error: expected `Event`
  --> $DIR/event_wrong_item_name.rs:19:11
   |
19 |     pub enum Foo {}
   |              ^^^
